(executables
 (names test_client crlf)
 (libraries cohttp_eio eio_main fmt uri))

(mdx
 (package cohttp-eio)
 (deps server.ml))

(env
 (_
  (binaries
   crlf.exe
   (test_client.exe as test-client))))

(cram
 (package cohttp-eio)
 (deps
  %{bin:crlf}
  %{bin:test-client}
  chunks.txt
  server_chunks.txt))
